<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/serverView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:text="@string/Server"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/guildView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/serverView"
            android:layout_toRightOf="@+id/serverView"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/GuildName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/serverEdit"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_below="@+id/serverView"
            android:hint="@string/ServerHint"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <EditText
            android:id="@+id/guildEdit"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_below="@+id/guildView"
            android:layout_toEndOf="@+id/serverEdit"
            android:layout_toRightOf="@+id/serverEdit"
            android:hint="@string/GuildNameHint"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp" />

        <Button
            android:id="@+id/enterBTN"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/guildEdit"
            android:layout_toRightOf="@+id/guildEdit"
            android:text="@string/ButtonName"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <GridView
            android:id="@+id/gridView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numColumns="2"
            android:layout_below="@id/guildEdit" />

    </RelativeLayout>

</RelativeLayout>
